[gd_scene load_steps=114 format=3 uid="uid://wdpqbbotx4pc"]

[ext_resource type="Script" path="res://wanderer.gd" id="1_jynn3"]
[ext_resource type="Texture2D" uid="uid://ddikexsolrdte" path="res://assets/images/wanderer_magician/Dead.png" id="2_av464"]
[ext_resource type="Texture2D" uid="uid://n5o5rtd74iw1" path="res://assets/images/enemies/wanderer_magican/Attack_2.png" id="2_e3r3i"]
[ext_resource type="Texture2D" uid="uid://cbchirlwu8851" path="res://assets/images/wanderer_magician/Idle.png" id="2_fvs65"]
[ext_resource type="Texture2D" uid="uid://cmqjrbuu4r5b6" path="res://assets/images/wanderer_magician/Hurt.png" id="3_6e2t0"]
[ext_resource type="Texture2D" uid="uid://3hoft6eutndb" path="res://assets/images/wanderer_magician/Magic_sphere.png" id="3_63e62"]
[ext_resource type="Texture2D" uid="uid://cfds1kiogp4rl" path="res://assets/images/enemies/wanderer_magican/Attack_1.png" id="3_w05gq"]
[ext_resource type="PackedScene" uid="uid://cukwo63gxcc2e" path="res://bar.tscn" id="4_mqgd7"]
[ext_resource type="Texture2D" uid="uid://5h0hdj1jqisk" path="res://assets/images/enemies/wanderer_magican/Magic_arrow.png" id="4_udf2s"]
[ext_resource type="Texture2D" uid="uid://ddm46mwj882a6" path="res://assets/images/wanderer_magician/Attack_1.png" id="5_psjj0"]
[ext_resource type="PackedScene" uid="uid://bskhplsh6jx4v" path="res://shieldbar.tscn" id="6_3505e"]
[ext_resource type="Shader" path="res://energy_shield.gdshader" id="6_wah1t"]
[ext_resource type="Texture2D" uid="uid://b0vfxnayhcbu4" path="res://assets/images/enemies/wanderer_magican/Magic_sphere.png" id="7_81afe"]
[ext_resource type="Texture2D" uid="uid://dgpsesl5xnjpu" path="res://assets/images/wanderer_magician/Attack_2.png" id="7_mkqym"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a37gy"]
atlas = ExtResource("2_e3r3i")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p8ok"]
atlas = ExtResource("2_e3r3i")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbv7u"]
atlas = ExtResource("2_e3r3i")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab053"]
atlas = ExtResource("2_e3r3i")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ccwo"]
atlas = ExtResource("2_e3r3i")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndnai"]
atlas = ExtResource("2_e3r3i")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv5tc"]
atlas = ExtResource("2_e3r3i")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul1mr"]
atlas = ExtResource("2_e3r3i")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kicja"]
atlas = ExtResource("2_e3r3i")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6krfa"]
atlas = ExtResource("2_av464")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeltp"]
atlas = ExtResource("2_av464")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbxe4"]
atlas = ExtResource("2_av464")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaymg"]
atlas = ExtResource("2_av464")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk5i4"]
atlas = ExtResource("3_w05gq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1ngf"]
atlas = ExtResource("3_w05gq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqqev"]
atlas = ExtResource("3_w05gq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rjy4"]
atlas = ExtResource("3_w05gq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao4yd"]
atlas = ExtResource("3_w05gq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v62qt"]
atlas = ExtResource("3_w05gq")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_efmd7"]
atlas = ExtResource("3_w05gq")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t32qb"]
atlas = ExtResource("4_udf2s")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqt76"]
atlas = ExtResource("4_udf2s")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ixwn"]
atlas = ExtResource("4_udf2s")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_btwho"]
atlas = ExtResource("4_udf2s")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi0kw"]
atlas = ExtResource("4_udf2s")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mobms"]
atlas = ExtResource("4_udf2s")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7yay"]
atlas = ExtResource("3_6e2t0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwfi4"]
atlas = ExtResource("3_6e2t0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfh57"]
atlas = ExtResource("3_6e2t0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lrin"]
atlas = ExtResource("3_6e2t0")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdbaq"]
atlas = ExtResource("3_63e62")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcmnu"]
atlas = ExtResource("3_63e62")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q70wx"]
atlas = ExtResource("3_63e62")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1cq1"]
atlas = ExtResource("3_63e62")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0dk5"]
atlas = ExtResource("3_63e62")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_afa6w"]
atlas = ExtResource("3_63e62")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gshj"]
atlas = ExtResource("3_63e62")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_se5gl"]
atlas = ExtResource("3_63e62")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovvdq"]
atlas = ExtResource("3_63e62")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8qxd"]
atlas = ExtResource("3_63e62")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob3ed"]
atlas = ExtResource("3_63e62")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq42i"]
atlas = ExtResource("3_63e62")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfw1d"]
atlas = ExtResource("3_63e62")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj1ie"]
atlas = ExtResource("3_63e62")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xigh2"]
atlas = ExtResource("3_63e62")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1mun"]
atlas = ExtResource("3_63e62")
region = Rect2(1920, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f37n"]
atlas = ExtResource("2_fvs65")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwaug"]
atlas = ExtResource("2_fvs65")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqlcc"]
atlas = ExtResource("2_fvs65")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7bs3"]
atlas = ExtResource("2_fvs65")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_15yxd"]
atlas = ExtResource("2_fvs65")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_md7da"]
atlas = ExtResource("2_fvs65")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeq16"]
atlas = ExtResource("2_fvs65")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m4rm"]
atlas = ExtResource("2_fvs65")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahhah"]
atlas = ExtResource("7_81afe")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vljia"]
atlas = ExtResource("7_81afe")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojrhi"]
atlas = ExtResource("7_81afe")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4utq"]
atlas = ExtResource("7_81afe")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwhfp"]
atlas = ExtResource("7_81afe")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8u7u"]
atlas = ExtResource("7_81afe")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yypcl"]
atlas = ExtResource("7_81afe")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fpvn"]
atlas = ExtResource("7_81afe")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ood86"]
atlas = ExtResource("7_81afe")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0cfj"]
atlas = ExtResource("7_81afe")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttnk8"]
atlas = ExtResource("7_81afe")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd10c"]
atlas = ExtResource("7_81afe")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni13q"]
atlas = ExtResource("7_81afe")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa02q"]
atlas = ExtResource("7_81afe")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1kbm"]
atlas = ExtResource("7_81afe")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhv8"]
atlas = ExtResource("7_81afe")
region = Rect2(1920, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dif6x"]
atlas = ExtResource("5_psjj0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wexi"]
atlas = ExtResource("5_psjj0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b24ys"]
atlas = ExtResource("5_psjj0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_04r6a"]
atlas = ExtResource("5_psjj0")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k56yi"]
atlas = ExtResource("5_psjj0")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y0hv"]
atlas = ExtResource("5_psjj0")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym8c5"]
atlas = ExtResource("5_psjj0")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxecb"]
atlas = ExtResource("2_fvs65")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d157"]
atlas = ExtResource("7_mkqym")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0cc5"]
atlas = ExtResource("7_mkqym")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tviuq"]
atlas = ExtResource("7_mkqym")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1h6g"]
atlas = ExtResource("7_mkqym")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mocw"]
atlas = ExtResource("7_mkqym")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo78l"]
atlas = ExtResource("7_mkqym")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys2ct"]
atlas = ExtResource("7_mkqym")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_10l61"]
atlas = ExtResource("7_mkqym")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_173bm"]
atlas = ExtResource("7_mkqym")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_a60l4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a37gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p8ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbv7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab053")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ccwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndnai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv5tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul1mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kicja")
}],
"loop": false,
"name": &"cold_touch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6krfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeltp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbxe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaymg")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk5i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1ngf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqqev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rjy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao4yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v62qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efmd7")
}],
"loop": false,
"name": &"energize",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t32qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqt76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ixwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btwho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi0kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mobms")
}],
"loop": false,
"name": &"freezing_arrow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7yay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwfi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfh57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lrin")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdbaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcmnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q70wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1cq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0dk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afa6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gshj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se5gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovvdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8qxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob3ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq42i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfw1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj1ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xigh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1mun")
}],
"loop": false,
"name": &"ice_cannon",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f37n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwaug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqlcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7bs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15yxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md7da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeq16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m4rm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahhah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vljia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojrhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4utq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwhfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8u7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yypcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fpvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ood86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0cfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttnk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd10c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni13q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa02q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1kbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhv8")
}],
"loop": false,
"name": &"meteor_shower",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dif6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wexi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b24ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04r6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k56yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y0hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym8c5")
}],
"loop": false,
"name": &"shield",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxecb")
}],
"loop": false,
"name": &"trigger_queue",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d157")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0cc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tviuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1h6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mocw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo78l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys2ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10l61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_173bm")
}],
"loop": false,
"name": &"zap",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_liq2o"]
shader = ExtResource("6_wah1t")
shader_parameter/color = Vector4(0.5, 0.7, 1, 1)

[sub_resource type="Animation" id="Animation_nc0o0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/EnergyShield/ColorRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_b0ugh"]
resource_name = "create_shield"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/EnergyShield/ColorRect:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ubqqh"]
_data = {
"RESET": SubResource("Animation_nc0o0"),
"create_shield": SubResource("Animation_b0ugh")
}

[sub_resource type="Animation" id="Animation_tt8ck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Highlight/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/ImageContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wq6m5"]
resource_name = "highlight_wanderer"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/ImageContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h2r7w"]
resource_name = "wanderer_highlighted"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Highlight/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.34902), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q1dwc"]
_data = {
"RESET": SubResource("Animation_tt8ck"),
"highlight_wanderer": SubResource("Animation_wq6m5"),
"wanderer_highlighted": SubResource("Animation_h2r7w")
}

[sub_resource type="Animation" id="Animation_ewjjk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Bar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/ShieldBar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jnq6f"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Bar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/ShieldBar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsdud"]
_data = {
"RESET": SubResource("Animation_ewjjk"),
"fade_out": SubResource("Animation_jnq6f")
}

[node name="Wanderer" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jynn3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ImageContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/ImageContainer"]
texture_filter = 1
position = Vector2(-264, -513)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_a60l4")
animation = &"ice_cannon"
centered = false

[node name="EnergyShield" type="Node2D" parent="VBoxContainer"]
scale = Vector2(1.5, 1.5)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/EnergyShield"]
material = SubResource("ShaderMaterial_liq2o")
offset_left = -122.0
offset_top = -144.0
offset_right = 448.0
offset_bottom = 496.0
pivot_offset = Vector2(285, 320)
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="Bar" parent="VBoxContainer" instance=ExtResource("4_mqgd7")]
layout_mode = 2

[node name="ShieldBar" parent="VBoxContainer" instance=ExtResource("6_3505e")]
layout_mode = 2

[node name="Highlight" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Highlight"]
modulate = Color(1, 1, 1, 0)
offset_right = 529.0
offset_bottom = 517.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ubqqh")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q1dwc")
}

[node name="AnimateBars" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xsdud")
}

[node name="SpellSprites" type="Node" parent="."]

[connection signal="animation_changed" from="VBoxContainer/ImageContainer/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="VBoxContainer/ImageContainer/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
